crates/datasec/src/did/web/snapshots/vercre_datasec__did__web__resolver__test__metadata.snap
---
source: crates/datasec/src/did/web/resolver.rs
assertion_line: 149
expression: resolved.metadata
---
{
  "contentType": "application/did+ld+json",
  "did": {
    "didString": "did:web:demo.credibil.io",
    "method": "key",
    "methodSpecificId": "demo.credibil.io"
  },
  "pattern": "^did:key:z[a-km-zA-HJ-NP-Z1-9]+$"
}
